--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-62">
+<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-63">
 <meta name="apple-mobile-web-app-title" content="Bernio">
 <title>Bernio</title>
 <style>
@@ -401,69 +401,83 @@ if (state.modeStage === 132) {
 
 /* === NOVÉ: MODE 14 a submeny 141/142 === */
 if (state.modeStage === 14) {
-  // Hlavní „Disp“ – vlevo „Disp“, dole vlevo „1“
+  // Hlavní „Disp“ stránka – vše vlevo
   exprEl.innerHTML =
     '<div class="modebar">' +
-      '<span class="label">Disp</span>' +
+      '<span class="label">Disp</span>' +   // vlevo
       '<span class="label"></span>' +
       '<span class="label"></span>' +
     '</div>';
   resEl.classList.add('mode');
+  // Jedna „1“ vlevo dole
   resEl.innerHTML = '<div class="numrow"><span>1</span></div>';
+
   const row = resEl.querySelector('.numrow');
   if (row && row.children[0]) {
-    row.children[0].style.cursor='pointer';
-    row.children[0].addEventListener('pointerdown', (ev)=>{ev.preventDefault(); handleMenuChoice('1');}, {passive:false});
+    row.children[0].style.cursor = 'pointer';
+    row.children[0].addEventListener('pointerdown', (ev) => {
+      ev.preventDefault();
+      handleMenuChoice('1');
+    }, { passive:false });
   }
   return true;
 }
 
 
 
+
 if (state.modeStage === 141) {
-  // Volba formátu zlomků: vlevo ab/c, uprostřed d/c + dole 1 2 a vpravo ▶
+  // ab/c vlevo, d/c uprostřed
   exprEl.innerHTML =
     '<div class="modebar">' +
-      '<span class="label">ab/c</span>' +
-      '<span class="label">d/c</span>' +
-      '<span class="label"></span>' +
+      '<span class="label">ab/c</span>' +   // vlevo
+      '<span class="label">d/c</span>' +    // střed
+      '<span class="label"></span>' +       // vpravo prázdné
     '</div>';
+
   resEl.classList.add('mode');
-resEl.innerHTML = `
-  <div class="numrow" style="display:grid;grid-template-columns:1fr 1fr auto;align-items:center;width:100%;">
-    <span style="justify-self:start;cursor:pointer">1</span>
-    <span style="justify-self:center;cursor:pointer">2</span>
-    <span style="justify-self:end;opacity:.85">⮕</span>
-  </div>`;
-const row = resEl.querySelector('.numrow');
-row.children[0].addEventListener('pointerdown', (e)=>{e.preventDefault(); handleMenuChoice('1');},{passive:false});
-row.children[1].addEventListener('pointerdown', (e)=>{e.preventDefault(); handleMenuChoice('2');},{passive:false});
-// POZOR: žádný listener na šipku – je jen indikace, přechod dělá HW pravá šipka
-return true;
+  // 1 vlevo, 2 uprostřed, vpravo šipka ⮕ do další stránky
+  resEl.innerHTML = `
+    <div class="numrow" style="display:grid;grid-template-columns:1fr 1fr auto;align-items:center;width:100%;">
+      <span style="justify-self:start;cursor:pointer">1</span>
+      <span style="justify-self:center;cursor:pointer">2</span>
+      <span id="dispNext" style="justify-self:end;cursor:pointer">⮕</span>
+    </div>`;
+
+  const row = resEl.querySelector('.numrow');
+  row.children[0].addEventListener('pointerdown', (e)=>{ e.preventDefault(); handleMenuChoice('1'); }, {passive:false});
+  row.children[1].addEventListener('pointerdown', (e)=>{ e.preventDefault(); handleMenuChoice('2'); }, {passive:false});
+  resEl.querySelector('#dispNext').addEventListener('pointerdown', (e)=>{ e.preventDefault(); handleMenuChoice('>'); }, {passive:false});
+  return true;
 }
+
 if (state.modeStage === 142) {
+  // Dot uprostřed, Comma vpravo
   exprEl.innerHTML =
     '<div class="modebar">' +
-      '<span class="label">Dot</span>' +
-      '<span class="label">Comma</span>' +
-      '<span class="label"></span>' +
+      '<span class="label"></span>' +          // vlevo prázdné
+      '<span class="label">Dot</span>' +       // střed
+      '<span class="label">Comma</span>' +     // vpravo
     '</div>';
+
   resEl.classList.add('mode');
-  // ⬅ vlevo (klikací), 1 uprostřed, 2 vpravo
+  // vlevo zpět (←) do 141, uprostřed 1, vpravo 2
   resEl.innerHTML = `
     <div class="numrow" style="display:grid;grid-template-columns:auto 1fr 1fr;align-items:center;width:100%;">
-      <span id="dispBack" style="justify-self:start;cursor:pointer">⬅</span>
+      <span id="dispPrev" style="justify-self:start;cursor:pointer">←</span>
       <span style="justify-self:center;cursor:pointer">1</span>
       <span style="justify-self:end;cursor:pointer">2</span>
     </div>`;
+
   const row = resEl.querySelector('.numrow');
-  // šipka zpět
-  resEl.querySelector('#dispBack').addEventListener('pointerdown', (e)=>{ e.preventDefault(); state.modeStage = 141; render(); }, {passive:false});
-  // 1 = Dot, 2 = Comma
-  row.children[1].addEventListener('pointerdown', (ev)=>{ ev.preventDefault(); handleMenuChoice('1'); }, {passive:false});
-  row.children[2].addEventListener('pointerdown', (ev)=>{ ev.preventDefault(); handleMenuChoice('2'); }, {passive:false});
+  // zpět na výběr ab/c vs d/c
+  resEl.querySelector('#dispPrev').addEventListener('pointerdown', (e)=>{ e.preventDefault(); state.modeStage = 141; render(); }, {passive:false});
+  // čísla
+  row.children[1].addEventListener('pointerdown', (e)=>{ e.preventDefault(); handleMenuChoice('1'); }, {passive:false});
+  row.children[2].addEventListener('pointerdown', (e)=>{ e.preventDefault(); handleMenuChoice('2'); }, {passive:false});
   return true;
 }
+
 
   // ==== PŮVODNÍ stránky (ponecháváme kvůli mini-promptu DRG>) ====
   if (state.modeStage === 1)  return setMenu(['Deg','Rad','Gra']);
@@ -2583,6 +2597,7 @@ function endExamScan(){   QR.start('END'); }
 </script>
 </body>
 </html>
+
 
 
 
